infrastructure/kubernetes/policies/cilium/egress-gateway-enforcement.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: restrict-egress-to-egress-gateway
  namespace: isectech-services
spec:
  endpointSelector: {}
  egressDeny:
    - toEntities:
        - world
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: istio-system
            k8s:app: istio-egressgateway
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: restrict-data-egress
  namespace: isectech-data
spec:
  endpointSelector: {}
  egressDeny:
    - toEntities:
        - world
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: isectech-services
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "6379"
              protocol: TCP
